--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 spring.resources.add-mappings=true
 spring.jpa.properties.javax.persistence.validation.mode=none
 
+spring.autoconfigure.exclude[0]=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
