"Working Spring security" but with lame validator + bugs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,14 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1}:3306/pizza_hot?useLeg
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.dialect.storage_engine=innodb
 spring.jpa.database-platform= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 spring.resources.add-mappings=true
 spring.jpa.properties.javax.persistence.validation.mode=none
+
 
 spring.autoconfigure.exclude[0]=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
