--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,8 @@ spring.resources.add-mappings=true
 spring.jpa.properties.javax.persistence.validation.mode=none
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
-
+multipart.enabled=true
+spring.http.multipart.max-file-size=500000KB
+spring.http.multipart.max-request-size=500000KB
 spring.autoconfigure.exclude[0]=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
