--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.jpa.properties.javax.persistence.validation.mode=none
+logging.level.org.springframework.web=DEBUG
+logging.level.pizza.hot=DEBUG
+logging.file.name=C:/Users/Groovy/Desktop/log/app.log
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.show-sql=true
