--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.pizza.hot=DEBUG
 logging.file.name=C:/Users/Groovy/Desktop/log/app.log
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/pizza_hot?useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=mysql://b86d5f7bb560c4:1257f5f7@us-cdbr-east-02.cleardb.com/heroku_c69d9e5901f7885?reconnect=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
